--- a/templates/index.html
+++ b/templates/index.html
@@ -284,6 +284,7 @@
                      <h3><span>+</span> Book Appointment</h3>
                      <div class="form">
                         <form action="{% url 'lifecare:booking' %}" method="POST">
+                           {% csrf_token %}
                            <fieldset>
                               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                  <div class="row">
